# aintegrator

./: .gitmodules  CMakeLists.txt  QtCreator.sh  readme.txt
BuildServer/: Nsis.nsi  generate-windows-msvc13.cmd  make-linux-gcc.sh  make-windows-mingw.cmd  make-windows-msvc.cmd  make-windows.cmd
BuildServer/dpkg/AIntegrator/DEBIAN/: postinst
BuildServer/dpkg/AIntegrator/etc/ld.so.conf.d/: AIntegrator.conf
BuildServer/dpkg/AIntegrator/tmp/: AIntegrator.desktop
BuildServer/scripts/linux/: functions.sh  make-deb.sh
BuildServer/utils/: purge.cmd  purge.sh
Cmake/: CopyRuntime.cmake  Nsis.cmake  PrepareProject.cmake  Tools.cmake
Docs/PRD/: AIntagrator_card_2dnpu.xlsx  AIntagrator_card_Aeromosaic.xlsx  AIntagrator_card_CellNetFhssSuppression.xlsx  AIntagrator_card_CellNetGpsEmulator.xlsx  AIntagrator_card_CellNetUavVideo.xlsx  AIntagrator_card_barion.xlsx  AIntegrator_CP.docx  AIntegrator_Gant.xlsx  AIntegrator_PRD.docx  AIntegrator_RE.docx  AIntegrator_UIP.docx  AIntegrator_card_3gpp-gui.xlsx  AIntegrator_card_DMPost.xlsx  AIntegrator_card_Rf-Post.xlsx  Mosquito_UM.docx
Docs/XML/: AIntegrator.xml  MyExecutionModuleConfig.xml
Meta/Mosquito541/: makedeb.sh
Meta/Mosquito541/dpkg/DEBIAN/: control
Sources/AIntegrator/Ai_Kernel/: CMakeLists.txt  Config.h  Kernel_Export.h
Sources/AIntegrator/Ai_Kernel/Command/: Command.cpp  Command.h  ICommand.h  Transaction.cpp  Transaction.h
Sources/AIntegrator/Ai_Kernel/Command/Internal/: HostConnected.cpp  HostConnected.h  HostDisconnected.cpp  HostDisconnected.h  LaunchExecutionModule.cpp  LaunchExecutionModule.h
Sources/AIntegrator/Ai_Kernel/Command/Response/: HandshakeResponse.cpp  HandshakeResponse.h
Sources/AIntegrator/Ai_Kernel/Command/Transaction/: KillProgram.cpp  KillProgram.h  RaiseWindow.cpp  RaiseWindow.h  SetPostParameters.cpp  SetPostParameters.h  SetWorkMode.cpp  SetWorkMode.h  WorkModeAction.cpp  WorkModeAction.h
Sources/AIntegrator/Ai_Kernel/Common/: ChangeableReference.h  Controller.cpp  Controller.h  Core.cpp  Core.h  ICore.h  IObserver.h  SignalSender.h  ThreadSaveQueue.h  ThreadSaveQueue.hpp
Sources/AIntegrator/Ai_Kernel/Launcher/: ProcessLauncher.cpp  ProcessLauncher.h
Sources/AIntegrator/Ai_Kernel/Log/: LogStorage.cpp  LogStorage.h
Sources/AIntegrator/Ai_Kernel/Protocol/Helper/: ProtocolHelper.cpp  ProtocolHelper.h
Sources/AIntegrator/Ai_Kernel/Protocol/code/: protobuf_packer.cpp  protobuf_packer.h
Sources/AIntegrator/Ai_Kernel/Protocol/gcc/: config.h
Sources/AIntegrator/Ai_Kernel/Protocol/utils/: makeproto.cmd  makeproto.sh
Sources/AIntegrator/Ai_Kernel/Query/: Query.cpp  Query.h
Sources/AIntegrator/Ai_Kernel/Setting/: IntegratorSettingsLoader.cpp  IntegratorSettingsLoader.h
Sources/AIntegrator/Ai_Kernel/State/: AppState.cpp  AppState.h  ConnectionSettings.cpp  ConnectionSettings.h
Sources/AIntegrator/Ai_Kernel/Translation/: AIntegrator_ru.qm  AIntegrator_ru.ts  Translation.qrc
Sources/AIntegrator/Ai_Kernel/Translation/Scripts/: 1_Update.sh  2_Translate.sh  3_Release.sh
Sources/AIntegrator/Ai_Kernel/Transport/: TcpServer.cpp  TcpServer.h
Sources/AIntegrator/Ai_Main/: CMakeLists.txt
Sources/AIntegrator/Ai_Main/Qml/: Cards.qml  DndGrid.qml  LogConsole.qml  MainApplication.qml  Qml.qrc  TooltipArea.qml  WindowStateSaver.qml
Sources/AIntegrator/Ai_Main/Qml/CardState/: SimpleCard.qml  StatusIcon.qml
Sources/AIntegrator/Ai_Main/Qml/Parameters/: ParameterItem.qml  RightParametersSheet.qml  RightSheet.qml
Sources/AIntegrator/Ai_Main/Src/: Application.cpp  Application.h  CardGroupModel.cpp  CardGroupModel.h  CardModel.cpp  CardModel.h  Translator.cpp  Translator.h  WorkStationModel.cpp  WorkStationModel.h  main.cpp
Sources/AIntegrator/Ai_Main/Src/CardState/: BaseCard.cpp  BaseCard.h  Icon.cpp  Icon.h  SimpleCard.cpp  SimpleCard.h
Sources/AIntegrator/Ai_Main/Src/Parameters/: BaseParameter.cpp  BaseParameter.h  (+14 more)
Sources/TestTcpClient/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  TcpClient.cpp  TcpClient.h  TestTcpClient.cpp
(+5 files in other folders)
